fix spacing

--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,9 @@
 .item{
     width: 150px;
     height: 400px;
-    background: #ffffff;
     flex: 1;
     margin: 0 1%;
-    padding-top: 10px;
+    padding-top: 13px;
     border-width: thick;
 }
 /* Style the top navigation bar */
@@ -122,7 +121,7 @@
     display: block;
     text-align: left;
 }
-
+}
 /* Add a grey background color to dropdown links on hover */
 .dropdown-content a:hover {
     background-color: #ddd;
@@ -152,13 +151,19 @@
     margin: 0; /* Important for vertical align on mobile phones */
 }
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
     .section {
         flex-direction: column;
         max-height: 100%;
     }
+
     .projects{
-        flex-direction: column;
+        display: block;
+        padding-bottom: 20px;
+    }
+    .item{
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 }
 
